@@ -37,15 +37,15 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
-        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <grpc.version>1.13.1</grpc.version>
         <protobuf.version>3.5.1</protobuf.version>
         <mysql.connector.version>8.0.23</mysql.connector.version>
         <scylla.connector.version>3.5.0</scylla.connector.version>
         <guice.version>5.1.0</guice.version>
-        <lombok.version>1.18.24</lombok.version>
+        <lombok.version>1.18.30</lombok.version>
         <jackson.version>2.13.3</jackson.version>
         <kafka.client.version>1.1.0</kafka.client.version>
         <dropwizard.version>2.1.1</dropwizard.version>
@@ -476,14 +476,13 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>compile-java-19</id>
+                        <id>compile-java-21</id>
                         <phase>compile</phase>
                         <goals>
                             <goal>compile</goal>
                         </goals>
                         <configuration>
                             <release>${maven.compiler.target}</release>
-                            <compilerArgs>--enable-preview</compilerArgs>
                             <annotationProcessorPaths>
                                 <path>
                                     <groupId>org.projectlombok</groupId>
@@ -492,7 +491,7 @@
                                 </path>
                             </annotationProcessorPaths>
                             <compileSourceRoots>
-                                <compileSourceRoot>${project.basedir}/src/main/java19</compileSourceRoot>
+                                <compileSourceRoot>${project.basedir}/src/main/java21</compileSourceRoot>
                             </compileSourceRoots>
                             <multiReleaseOutput>true</multiReleaseOutput>
                         </configuration>
@@ -602,7 +601,6 @@
                                 </goals>
                                 <configuration>
                                     <release>${maven.compiler.target}</release>
-                                    <compilerArgs>--enable-preview</compilerArgs>
                                     <annotationProcessorPaths>
                                         <path>
                                             <groupId>org.projectlombok</groupId>
